refactors gui for XYTabPane

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -114,6 +114,20 @@ addressAlreadyInUse=Simulatorstart fehlgeschlagen - hast Du die Software 2 x ges
 networkIsUnreachable=Das Netzwerkgerät ist an an der angegebenen \nAddresse und Port-Nummer nicht erreichbar.\nBitte prüfe das Gerät und die Einstellungen. 
 obdException=Es gab ein Problem mit der OBD Verbindung. \nDie häufigste Ursache ist ein timeout der z.B. erfolgt\nwenn die Baudrate nicht stimmt oder das Gerät nicht aktiv ist\n weil es sich z.B. schlafen gelegt hat. 
 connectionRefused=Das Netzwerk ist an an der angegebenen \nAddresse aber nicht auf dieser Port-Nummer erreichbar.\nBitte prüfe das Gerät und die Einstellungen. 
+#App json
+info=Info
+cellTemp=Zelltemperaturen
+cellVoltage=Zellspannungen
+charging=Laden
+connection=Verbindung
+history=Verlauf
+moving=Fahren
+obdii=OBDII
+parking=Parken
+preferences=Vorgaben
+soc_rr=Ladung/Reichweite
+trip=Trip
+vehicle=Fahrzeug
 # fxml
 serialDevice=Anschluß
 serialDeviceTooltip=Der Name des Anschlußes hängt vom Betriebssystem des Computers ab
