--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -116,6 +116,20 @@ addressAlreadyInUse=Could not start Simulator - did you start the software twice
 networkIsUnreachable=The network address and port you specified is not reachable.\nYou might want to check the network device and the settings. 
 obdException=Their has been a problem with the OBD connection. \nThe most common error is a timeout which might e.g. happen\n if you set the wrong baud rate or the device is not listening\n e.g. because it went to sleep. 
 connectionRefused=The network is reachable at the address but not the port you specified.\nYou might want to check the network device and the settings. 
+# App json
+info=Info
+cellTemp=Cell Temperatures
+cellVoltage=Cell Voltages
+charging=Charging
+connection=Connection
+history=History
+moving=Moving
+obdii=OBDII
+parking=Parking
+preferences=Preferences
+soc_rr=SOC/RR
+trip=Trip
+vehicle=Vehicle
 # FXML
 serialDevice=device
 serialDeviceTooltip=the name of the device depends on your computer's operating system
