--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -66,6 +66,7 @@ rpmSpeedAvg=Ø
 revCount=Drehzahl
 soc=Ladung
 dashBoard=Drehzahl
+dashBoardTab=Instrumente
 clocks=Uhren
 fullScreen=Vollbild\u2191
 partScreen=Vollbild\u2193
