--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -67,6 +67,7 @@ rpmSpeedMax=Max
 rpmSpeedAvg=Avg
 revCount=Rev Count
 soc=SOC
+dashBoardTab=Dashboard
 dashBoard=RPM
 clocks=Clocks
 fullScreen=full Screen\u2191
