adds toolTip to PowerOff button

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -51,6 +51,7 @@ halted=halt
 sorry=Entschuldigung
 weAreSorry=Es tut uns leid ...
 notImplementedYet= ist noch nicht realisiert
+powerOff=Beenden
 #Watches
 watchParking=Parken
 watchMoving=Fahren
