--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -52,6 +52,7 @@ halted=stopped
 sorry=sorry
 weAreSorry=We are sorry ...
 notImplementedYet= is not implemented yet
+powerOff=Exit
 # Watches
 watchParking=Parking
 watchMoving=Moving
