improves user interface

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -68,6 +68,7 @@ revCount=Drehzahl
 soc=Ladung
 dashBoard=Drehzahl
 dashBoardTab=Instrumente
+batteryTab=Zellen
 clocks=Uhren
 fullScreen=Vollbild\u2191
 partScreen=Vollbild\u2193
@@ -108,6 +109,7 @@ welcomeLanguage=Willkommen zur Can4Eve software\nBitte wähle eine Sprache
 welcomeVehicleType=Bitte wähle Deinen Fahrzeugtyp
 welcomeVehicle=Lese Fahrzeugdaten ...
 welcomeObd=Bitte wähle eine OBDII Verbindung
+welcomeOwner=Besitzerdetails ...
 welcomeCon=Bitte setze die Verbindungsparameter
 welcomeTestResult=Verbindungstest ...
 welcomeTestVehicle=Bitte verbinde nun das OBDII-Adapter mit dem Fahrzeug \nund schaltet das Fahrzeug ein.
@@ -125,6 +127,7 @@ connection=Verbindung
 history=Verlauf
 moving=Fahren
 obdii=OBDII
+owner=Besitzer
 parking=Parken
 preferences=Vorgaben
 soc_rr=Ladung/Reichweite
