--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -69,6 +69,7 @@ rpmSpeedAvg=Avg
 revCount=Rev Count
 soc=SOC
 dashBoardTab=Dashboard
+batteryTab=Cells
 dashBoard=RPM
 clocks=Clocks
 fullScreen=full Screen\u2191
@@ -110,6 +111,7 @@ welcomeLanguage=Welcome to the Can4Eve software!\nPlease select a language
 welcomeVehicle=Reading vehicle data ...
 welcomeVehicleType=Please select a vehicle type
 welcomeObd=Please select an OBDII Connection
+welcomeOwner=Please add vehicle Owner details
 welcomeCon=Please set the connection parameters
 welcomeTestResult=Testing Connection ...
 welcomeTestVehicle=Please connect your OBDII-Adapter to the vehicle now\n and switch on the vehicle.
@@ -127,6 +129,7 @@ connection=Connection
 history=History
 moving=Moving
 obdii=OBDII
+owner=Owner
 parking=Parking
 preferences=Preferences
 soc_rr=SOC/RR
