adapts to new version of gui

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -15,6 +15,7 @@ obdStartMenuItem=Start
 obdStartWithLogMenuItem=Start with Log
 obdHaltMenuItem=Halt
 obdTestMenuItem=Test
+settingsForm=OBDII
 settingsMenu=Einstellungen
 settingsSettingsMenuItem=OBDII
 settingsPreferencesMenuItem=Vorgaben
@@ -119,19 +120,21 @@ networkIsUnreachable=Das Netzwerkgerät ist an an der angegebenen \nAddresse und 
 obdException=Es gab ein Problem mit der OBD Verbindung. \nDie häufigste Ursache ist ein timeout der z.B. erfolgt\nwenn die Baudrate nicht stimmt oder das Gerät nicht aktiv ist\n weil es sich z.B. schlafen gelegt hat. 
 connectionRefused=Das Netzwerk ist an an der angegebenen \nAddresse aber nicht auf dieser Port-Nummer erreichbar.\nBitte prüfe das Gerät und die Einstellungen. 
 #App json
-info=Info
+mainGroup=Info # com.bitplan.gui.Group info/INFO
 cellTemp=Zelltemperaturen
 cellVoltage=Zellspannungen
 charging=Laden
 connection=Verbindung
-history=Verlauf
+historyGroup=Verlauf
 moving=Fahren
 obdii=OBDII
-owner=Besitzer
+ownerForm=Besitzer
 parking=Parken
-preferences=Vorgaben
+preferencesForm=Vorgaben
+preferencesGroup=Vorgaben
 soc_rr=Ladung/Reichweite
 trip=Trip
+vehicleForm=Fahrzeug
 vehicle=Fahrzeug
 # fxml
 serialDevice=Anschluß
