--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -121,20 +121,28 @@ networkIsUnreachable=The network address and port you specified is not reachable
 obdException=Their has been a problem with the OBD connection. \nThe most common error is a timeout which might e.g. happen\n if you set the wrong baud rate or the device is not listening\n e.g. because it went to sleep. 
 connectionRefused=The network is reachable at the address but not the port you specified.\nYou might want to check the network device and the settings. 
 # App json
-info=Info
+mainGroup=Info # com.bitplan.gui.Group info/INFO
 cellTemp=Cell Temperatures
 cellVoltage=Cell Voltages
 charging=Charging
 connection=Connection
-history=History
+#com.bitplan.gui.Group history/LINE_CHART
+historyGroup=history
 moving=Moving
-obdii=OBDII
-owner=Owner
+#com.bitplan.gui.Form obdii/obdii
+settingsForm=OBDII
+#com.bitplan.gui.Form owner/USER
+ownerForm=owner
 parking=Parking
-preferences=Preferences
+#com.bitplan.gui.Group preferences/GEAR
+preferencesGroup=Preferences
+#com.bitplan.gui.Form preferences/preferences
+preferencesForm=Preferences
 soc_rr=SOC/RR
 trip=Trip
-vehicle=Vehicle
+#com.bitplan.gui.Form vehicle/CAR
+vehicleForm=vehicle
+vehicle=vehicle
 # FXML
 serialDevice=device
 serialDeviceTooltip=the name of the device depends on your computer's operating system
