--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -73,6 +73,8 @@ batteryTab=Zellen
 clocks=Uhren
 fullScreen=Vollbild\u2191
 partScreen=Vollbild\u2193
+darkMode=Dunkel
+lightMode=Hell
 hideMenu=Menü\u2193
 showMenu=Menü\u2191
 screenShot=ScreenShot
