--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -74,6 +74,8 @@ dashBoard=RPM
 clocks=Clocks
 fullScreen=full Screen\u2191
 partScreen=full Screen\u2193
+darkMode=dark
+lightMode=light
 hideMenu=Menu\u2193
 showMenu=Menu\u2191
 screenShot=ScreenShot
