--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -75,6 +75,7 @@ fullScreen=Vollbild\u2191
 partScreen=Vollbild\u2193
 darkMode=Dunkel
 lightMode=Hell
+restart=restart
 hideMenu=Menü\u2193
 showMenu=Menü\u2191
 screenShot=ScreenShot
