--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -26,7 +26,7 @@ viewDashboardViewMenuItem=Dashboard
 viewHistoryViewMenuItem=History
 viewSettingsViewMenuItem=Settings
 viewMonitorViewMenuItem=OBD
-helpMenu=Help 
+helpMenu=Help
 helpAboutMenuItem=About
 helpHelpMenuItem=can4eve Help
 helpFeedbackMenuItem=send Feedback ...
@@ -76,6 +76,7 @@ fullScreen=full Screen\u2191
 partScreen=full Screen\u2193
 darkMode=dark
 lightMode=light
+restart=restart
 hideMenu=Menu\u2193
 showMenu=Menu\u2191
 screenShot=ScreenShot
@@ -119,9 +120,9 @@ welcomeTestResult=Testing Connection ...
 welcomeTestVehicle=Please connect your OBDII-Adapter to the vehicle now\n and switch on the vehicle.
 # ExceptionHelps
 addressAlreadyInUse=Could not start Simulator - did you start the software twice?
-networkIsUnreachable=The network address and port you specified is not reachable.\nYou might want to check the network device and the settings. 
-obdException=Their has been a problem with the OBD connection. \nThe most common error is a timeout which might e.g. happen\n if you set the wrong baud rate or the device is not listening\n e.g. because it went to sleep. 
-connectionRefused=The network is reachable at the address but not the port you specified.\nYou might want to check the network device and the settings. 
+networkIsUnreachable=The network address and port you specified is not reachable.\nYou might want to check the network device and the settings.
+obdException=Their has been a problem with the OBD connection. \nThe most common error is a timeout which might e.g. happen\n if you set the wrong baud rate or the device is not listening\n e.g. because it went to sleep.
+connectionRefused=The network is reachable at the address but not the port you specified.\nYou might want to check the network device and the settings.
 # App json
 mainGroup=Info # com.bitplan.gui.Group info/INFO
 cellTemp=Cell Temperatures
